--- a/pages/snippets.html
+++ b/pages/snippets.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/styles/solarized-dark.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.9/highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/he/1.2.0/he.min.js"></script>
     <link rel="stylesheet" href="../styles/style.css">
     <script defer src="../index.js" type="module"></script>
   </head>
